fixed link spacing in mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,10 @@ p.copyright {
 	margin: 0 auto;
 }
 
+.circlelink {
+	padding: 10px;
+}
+
 .circle:hover {
 	background: #105596;
 }
